--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "firebase": "^7.12.0",
-    "register-service-worker": "^1.6.2",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
+    "core-js": "^3.6.5",
+    "firebase": "^7.19.0",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuetify": "^2.3.9",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -27,15 +27,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.1.2",
-    "node-sass": "^4.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
     "root": true,
